Removed fixed menu as it does not work well on iOS with a fixed background. Added Open Sans and Source Code Pro fonts.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
 /* ---------------------------------------------------- *\
+	CONTENTS
+\* ---------------------------------------------------- */
 
+
+/* ---------------------------------------------------- *\
+	TYPOGRAPHY
+\* ---------------------------------------------------- */
+
+body {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 120%;
+	font-weight: 300;
+}
+
+h1, h2, h2 {
+	font-family: 'Source Code Pro', sans-serif;
+	font-weight: 300;
+}
+
+/* ---------------------------------------------------- *\
+	PARENT
 \* ---------------------------------------------------- */
 html {
 	background: url('img/London_title-background.jpg') no-repeat center center fixed;
@@ -10,8 +30,8 @@ html {
 
 body {
 	height: 100%;
-	overflow: auto;
 	-webkit-overflow-scrolling: touch;
+	overflow: auto;
 }
 
 .container {
@@ -19,11 +39,15 @@ body {
 	padding: 0;
 }
 
+
+/* ---------------------------------------------------- *\
+	HEADER
+\* ---------------------------------------------------- */
+
 .header_nav {
 	background: #000;
 	color: #fff;
 	height: 100px;
-	position: fixed;
 	width: 100%;
 }
 
@@ -37,21 +61,26 @@ body {
 	}
 
 #bg_viewport {
-	height: 500px;
+	height: 400px;
 	width: 100%;
 }
 
 #recent_work {
 	width: 100%;
 	height: 500px;
-	background: blue;
+	background: #F1F1F1;
 }
 
 #recent_posts {
 	height: 500px;
-	background: pink;
+	background: #F7F7F7;
 	width: 100%;
 }
+
+
+/* ---------------------------------------------------- *\
+	FOOTER
+\* ---------------------------------------------------- */
 
 footer {
 	height: 300px;
@@ -61,5 +90,5 @@ footer {
 	#footer_links {
 		height: 200px;
 		width: 100%;
-		background: green;
+		background: gray;
 	}
